--- a/home_work1/pom.xml
+++ b/home_work1/pom.xml
@@ -24,6 +24,11 @@
             <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
